unpackaged/main/default/objects/conference360__Session__c/fields/conference360__Capacity__c.field-meta.xml
<CustomField>
    <fullName>conference360__Capacity__c</fullName>
    <label>Capacity(Deprecated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>