unpackaged/main/default/objects/conference360__Session__c/fields/conference360__Chat_Channel_Created__c.field-meta.xml
<CustomField>
    <fullName>conference360__Chat_Channel_Created__c</fullName>
    <description>Indicates if a chat channel has already been created or deleted.</description>
    <inlineHelpText>Indicates if a chat channel has already been created or deleted.</inlineHelpText>
    <label>Chat Channel Created</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>