unpackaged/main/default/objects/conference360__Session__c/fields/conference360__Description__c.field-meta.xml
<CustomField>
    <fullName>conference360__Description__c</fullName>
    <description>The Description for this Session.</description>
    <inlineHelpText>The Description for this Session.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>