unpackaged/main/default/objects/conference360__Session__c/fields/conference360__End_Date_Time_GMT__c.field-meta.xml
<CustomField>
    <fullName>conference360__End_Date_Time_GMT__c</fullName>
    <description>Sales date of the session.</description>
    <inlineHelpText>End date of the session.Set automatically. Not to be manually updated</inlineHelpText>
    <label>End Date/Time</label>
    <type>DateTime</type>
</CustomField>