unpackaged/main/default/objects/conference360__Session__c/fields/conference360__Featured_Session__c.field-meta.xml
<CustomField>
    <fullName>conference360__Featured_Session__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to make the Session Featured in AttendeeLink and elsewhere in Blackthorn Events.</inlineHelpText>
    <label>Featured Session</label>
    <type>Checkbox</type>
</CustomField>