unpackaged/main/default/objects/conference360__Session__c/fields/conference360__Main_Stage__c.field-meta.xml
<CustomField>
    <fullName>conference360__Main_Stage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Main Stage</label>
    <type>Checkbox</type>
</CustomField>