unpackaged/main/default/objects/conference360__Session__c/fields/conference360__Post_Session_Questions__c.field-meta.xml
<CustomField>
    <fullName>conference360__Post_Session_Questions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>These questions will be asked as part of a Post Event survey.</inlineHelpText>
    <label>Post Session Questions</label>
    <referenceTo>conference360__Form__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions_PostEvent</relationshipName>
    <type>Lookup</type>
</CustomField>