unpackaged/main/default/objects/conference360__Session__c/fields/conference360__Session_Capacity__c.field-meta.xml
<CustomField>
    <fullName>conference360__Session_Capacity__c</fullName>
    <description>Deprecated - No replacement. Maximum attendee count for the session</description>
    <inlineHelpText>Maximum attendee count for the session</inlineHelpText>
    <label>Capacity(Deprecated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>