unpackaged/main/default/objects/conference360__Session__c/fields/conference360__Session_Category__c.field-meta.xml
<CustomField>
    <fullName>conference360__Session_Category__c</fullName>
    <description>Session location category. Can be Venue or Virtual.</description>
    <inlineHelpText>Session location category. Can be Venue or Virtual.</inlineHelpText>
    <label>Session Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Venue</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>