unpackaged/main/default/objects/conference360__Session__c/fields/conference360__Short_Description2__c.field-meta.xml
<CustomField>
    <fullName>conference360__Short_Description2__c</fullName>
    <label>Short Description</label>
    <length>140</length>
    <type>Text</type>
</CustomField>