unpackaged/main/default/objects/conference360__Session__c/fields/conference360__Short_Description__c.field-meta.xml
<CustomField>
    <fullName>conference360__Short_Description__c</fullName>
    <label>Short Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>