unpackaged/main/default/objects/conference360__Session__c/fields/conference360__Start_Date_Time_GMT__c.field-meta.xml
<CustomField>
    <fullName>conference360__Start_Date_Time_GMT__c</fullName>
    <description>Sales date of the session in GMT. Set automatically. Not to be manually updated</description>
    <inlineHelpText>Start date of the session in GMT.</inlineHelpText>
    <label>Start Date/Time</label>
    <type>DateTime</type>
</CustomField>