unpackaged/main/default/objects/conference360__Session__c/fields/conference360__Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>conference360__Status_Formula__c</fullName>
    <description>The current status of your event, event item, or session.</description>
    <formula>if(conference360__Remaining_Seats__c&lt;=0 ,
    if(conference360__Waitlist_Enabled__c == false ,&#39;Sold Out&#39;,
        if( OR(conference360__Event__r.conference360__Event_End_Date_Time_GMT__c &lt; NOW(),conference360__End_Date_Time_GMT__c  &lt; NOW()),
            if(conference360__Hide_On_Event_Page__c ==false,&#39;Registration ended (Public)&#39;,&#39;Registration ended (Private)&#39;),
            if(OR(conference360__Remaining_Waitlist_Capacity__c &gt;0 , ISNULL(conference360__Remaining_Waitlist_Capacity__c)),&#39;Sold Out, Waitlist Open&#39;,&#39;Sold Out, Waitlist Closed&#39;)
        )

        
    ),

    if(conference360__Hide_On_Event_Page__c ==false , 
            if(conference360__Event__r.conference360__Event_End_Date_Time_GMT__c &lt; NOW(),&#39;Registration ended (Public)&#39;,
                if(conference360__End_Date_Time_GMT__c  &lt; NOW(),&#39;Registration ended (Public)&#39;,
                    if(ISNULL(conference360__Start_Date_Time_GMT__c) ,&#39;Registration active (Public)&#39;,
                        if(AND(conference360__Start_Date_Time_GMT__c &lt;=NOW(),conference360__End_Date_Time_GMT__c&gt; NOW()),&#39;Registration active (Public)&#39;,
                        &#39;Pending Registration Start Date (Public)&#39;
                        )
                    )

                )
            ),
            if(conference360__Event__r.conference360__Event_End_Date_Time_GMT__c &lt; NOW(),&#39;Registration ended (Private)&#39;,
                if(conference360__End_Date_Time_GMT__c  &lt; NOW(),&#39;Registration ended (Private)&#39;,
                    if(ISNULL(conference360__Start_Date_Time_GMT__c), &#39;Registration active (Private)&#39;,
                        if(AND(conference360__Start_Date_Time_GMT__c &lt;=NOW(),conference360__End_Date_Time_GMT__c&gt; NOW()),&#39;Registration active (Private)&#39;,
                        &#39;Pending Registration Start Date (Private)&#39;
                        )
                    )
                )
            )
    )
    
)</formula>
    <inlineHelpText>The current status of your event, event item, or session.</inlineHelpText>
    <label>Status Formula</label>
    <type>Text</type>
</CustomField>