unpackaged/main/default/objects/conference360__Session__c/fields/conference360__Streaming_Service_URL__c.field-meta.xml
<CustomField>
    <fullName>conference360__Streaming_Service_URL__c</fullName>
    <inlineHelpText>Deprecated - use the Webinar/Meeting URL field instead.</inlineHelpText>
    <label>Streaming Service URL</label>
    <type>Url</type>
</CustomField>