unpackaged/main/default/objects/conference360__Session__c/fields/conference360__Topic__c.field-meta.xml
<CustomField>
    <fullName>conference360__Topic__c</fullName>
    <description>The topic of this Session.</description>
    <inlineHelpText>The topic of this Session.</inlineHelpText>
    <label>Topic</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Health &amp; Sciences</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Information Technology</fullName>
            </value>
            <value>
                <fullName>High Tech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>