unpackaged/main/default/objects/conference360__Session__c/fields/conference360__Update_Attendee_Count__c.field-meta.xml
<CustomField>
    <fullName>conference360__Update_Attendee_Count__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this field to kick off a Batch to update the Session Attendee Count fields on the record</inlineHelpText>
    <label>Update Session Attendee Count</label>
    <type>Checkbox</type>
</CustomField>