unpackaged/main/default/objects/conference360__Session__c/fields/conference360__Visibility_Control__c.field-meta.xml
<CustomField>
    <fullName>conference360__Visibility_Control__c</fullName>
    <description>Dynamically show or hide Sessions based upon matching values on the Contact&#39;s Visibility Control field.</description>
    <inlineHelpText>Dynamically show or hide Sessions based upon matching values on the Contact&#39;s Visibility Control field.</inlineHelpText>
    <label>Visibility Control</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hialeah</fullName>
                <label>Hialeah Campus</label>
            </value>
            <value>
                <fullName>Homestead</fullName>
                <label>Homestead Campus</label>
            </value>
            <value>
                <fullName>Padron</fullName>
                <label>Eduardo J. Padron Campus</label>
            </value>
            <value>
                <fullName>Kendall</fullName>
                <label>Kendall Campus</label>
            </value>
            <value>
                <fullName>Medical</fullName>
                <label>Medical Campus</label>
            </value>
            <value>
                <fullName>North</fullName>
                <label>North Campus</label>
            </value>
            <value>
                <fullName>MDC Online</fullName>
            </value>
            <value>
                <fullName>West</fullName>
                <label>West Campus</label>
            </value>
            <value>
                <fullName>Wolfson</fullName>
                <label>Wolfson Campus</label>
            </value>
            <value>
                <fullName>Member</fullName>
                <isActive>false</isActive>
                <label>Member</label>
            </value>
            <value>
                <fullName>Non-Member</fullName>
                <isActive>false</isActive>
                <label>Non-Member</label>
            </value>
            <value>
                <fullName>Press</fullName>
                <isActive>false</isActive>
                <label>Press</label>
            </value>
            <value>
                <fullName>VIP</fullName>
                <isActive>false</isActive>
                <label>VIP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>