unpackaged/main/default/objects/conference360__Session__c/fields/conference360__Visibility_Rule__c.field-meta.xml
<CustomField>
    <fullName>conference360__Visibility_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Dictates whether or not the attendee can view this session.</description>
    <inlineHelpText>Dictates whether or not the attendee can view this session.</inlineHelpText>
    <label>Visibility Rule</label>
    <referenceTo>bt_base__Rule__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>