unpackaged/main/default/objects/conference360__Session__c/fields/conference360__Webinar_Account__c.field-meta.xml
<CustomField>
    <fullName>conference360__Webinar_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Webinar/Meeting Account</label>
    <referenceTo>conference360__Webinar_Account__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>