unpackaged/main/default/objects/conference360__Session__c/fields/conference360__Webinar_Password2__c.field-meta.xml
<CustomField>
    <fullName>conference360__Webinar_Password2__c</fullName>
    <label>Webinar/Meeting Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>