unpackaged/main/default/objects/conference360__Session__c/fields/conference360__Webinar_URL__c.field-meta.xml
<CustomField>
    <fullName>conference360__Webinar_URL__c</fullName>
    <label>Webinar/Meeting URL</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>