unpackaged/main/default/objects/conference360__Session__c/fields/conference360__Zoom_Email_Notifications__c.field-meta.xml
<CustomField>
    <fullName>conference360__Zoom_Email_Notifications__c</fullName>
    <description>This field controls whether Zoom email notifications are sent to registrants for the associated event or session. It allows users to toggle email notifications using the Zoom Meeting API, ensuring flexibility in communication settings.</description>
    <inlineHelpText>Select an option to manage Zoom email notifications for this event or session. Only applies to Zoom meetings/webinars.</inlineHelpText>
    <label>Zoom Email Notifications</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Use Zoom Account Settings</fullName>
                <default>true</default>
                <label>Use Zoom Account Settings</label>
            </value>
            <value>
                <fullName>Send Zoom Emails</fullName>
            </value>
            <value>
                <fullName>Do not send Zoom Emails</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>