unpackaged/main/default/objects/conference360__Session__c/fields/conference360__Zoom_Personal_Meeting_ID_Enabled__c.field-meta.xml
<CustomField>
    <fullName>conference360__Zoom_Personal_Meeting_ID_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, the Zoom account connected to this event has a Personal Meeting ID enabled. Do not modify this value manually.</description>
    <inlineHelpText>If true, the Zoom account connected to this event has a Personal Meeting ID enabled. Do not modify this value manually.</inlineHelpText>
    <label>Zoom Personal Meeting ID Enabled</label>
    <type>Checkbox</type>
</CustomField>