unpackaged/main/default/objects/conference360__Session__c/fields/conference360__Zoom_Registration_Approval_Type__c.field-meta.xml
<CustomField>
    <fullName>conference360__Zoom_Registration_Approval_Type__c</fullName>
    <description>Enable meeting registration approval.
0 - Automatically approve registration.
1 - Manually approve registration.
2 - No registration required.
https://developers.zoom.us/docs/api/rest/reference/zoom-api/methods/#operation/meetingCreate</description>
    <inlineHelpText>Enable meeting registration approval.
0 - Automatically approve registration.
1 - Manually approve registration.
2 - No registration required.</inlineHelpText>
    <label>Zoom Registration Approval Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <default>true</default>
                <label>No registration required</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Manually approve registration</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>Automatically approve registration</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>