unpackaged/main/default/objects/conference360__Session__c/fields/conference360__Zoom_Type__c.field-meta.xml
<CustomField>
    <fullName>conference360__Zoom_Type__c</fullName>
    <label>Zoom Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>