unpackaged/main/default/objects/conference360__Session__c/validationRules/conference360__Session_Visible.validationRule-meta.xml
<ValidationRule>
    <fullName>conference360__Session_Visible</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(conference360__Visibility_Control__c))  &amp;&amp;
 conference360__Main_Stage__c = true</errorConditionFormula>
    <errorMessage>Main Stage Sessions are visible for all Attendees, you cannot assign a Visibility Control value to this Session.</errorMessage>
</ValidationRule>